Add disable and required feilds to forms. Add css class of ng for example

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -3,3 +3,12 @@
   background-color: #9A5AE8;
   border-color: #9A5AE8;
 }
+
+
+input.ng-invalid.ng-dirty {
+  background-color: #FA787E;
+}
+
+input.ng-valid.ng-dirty {
+  background-color: #78FA89;
+}
