--- a/client/views/signin.html
+++ b/client/views/signin.html
@@ -8,17 +8,19 @@
   <div class='form-group'>
   	<label class='col-sm-1'>Password:</label>
   	<div class='col-xs-12'>
-	  <input class='form-control' type='password' ng-model='password' required>
+	  <input class='form-control' type='password' ng-model='password'  ng-pattern='/\W/' required>
   	</div>
     <!-- {{username}} -->
   </div>
   <div class='form-group'>
   	<label class='col-sm-12'>Retype Password:</label>
   	<div class='col-xs-12'>
-	  <input  class='form-control' type='password' ng-model='passwordCheck' required>    
+	  <input class='form-control' type='password' ng-model='passwordCheck' required>    
   	</div>
   </div>
   <div class='form-group'>
-    <button type="submit" ng-disabled='form.$invalid' class="btn btn-success  col-xs-3 col-xs-offset-8">Login!</button>
+    <button type="submit" ng-disabled='form.$invalid' class="btn btn-success col-xs-3 col-xs-offset-8">Login!</button>
   </div>
 </form>
+<pre ng-show={{debugger}}>Password: {{password}} Password2: {{passwordCheck}}
+</pre>
