--- a/client/views/signin.html
+++ b/client/views/signin.html
@@ -1,3 +1,7 @@
+<pre ng-show={{debugger}}>Password: {{password}} Password2: {{passwordCheck}}
+Form Invalid : {{form.$invalid}}
+Form NotValid: {{isNotValid()}}
+</pre>
 <form name='form' class='form-horizontal well' role='form' novalidate>
   <div class='form-group'>
   	<label class='col-xs-4'> Username: </label>
@@ -8,7 +12,7 @@
   <div class='form-group'>
   	<label class='col-sm-1'>Password:</label>
   	<div class='col-xs-12'>
-	  <input class='form-control' type='password' ng-model='password'  ng-pattern='/\W/' required>
+	  <input class='form-control' type='password' ng-model='password' required>
   	</div>
     <!-- {{username}} -->
   </div>
@@ -19,8 +23,6 @@
   	</div>
   </div>
   <div class='form-group'>
-    <button type="submit" ng-disabled='form.$invalid' class="btn btn-success col-xs-3 col-xs-offset-8">Login!</button>
+    <button type="submit" ng-disabled='form.$invalid || isNotValid()' class="btn btn-success col-xs-3 col-xs-offset-8">Login!</button>
   </div>
 </form>
-<pre ng-show={{debugger}}>Password: {{password}} Password2: {{passwordCheck}}
-</pre>
